--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-snowflake-connector-python
-requests
-streamlit-lottie
+snowflake-connector-python==2.8.0
+requests==2.28.1
+streamlit-lottie==0.0.3
